--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,8 +8,8 @@
     
     <!--<meta name="darkreader-lock">-->
     <link rel="stylesheet" href="/css/style.css">
-    <!-- Feeds -->
-    <link rel="alternate" href="/feed/feed.xml" title="Flux du blog de Téotime Pacreau" type="application/atom+xml">
+    <!-- Auto detection of the RSS feed for RSS readers -->
+    <link rel="alternate" href="/feed/feed.xml" title="Flux RSS du blog de Téotime Pacreau" type="application/atom+xml">
     <!--Favicon-->
     <link rel="icon" href="../favicon/favicon.svg"/>
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/favicon.svg"/>
