--- a/src/_includes/baseforprojets.html
+++ b/src/_includes/baseforprojets.html
@@ -1,7 +1,3 @@
----
-title: Les posts du blog de Téotime Pacreau classés par tag
----
-
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -14,19 +10,19 @@ title: Les posts du blog de Téotime Pacreau classés par tag
         <nav>
           <ul class="menu">
             <li>
-              <a id="home" href="../../index.html" aria-label="Home page"
+              <a id="home" href="../index.html" aria-label="Home page"
                 ><i class="ph-bold ph-house-simple"></i
               ></a>
             </li>
-            <li><a href="../../curriculum">01 Curriculum Vitae</a></li>
-            <li><a href="../../blog">02 Blog</a></li>
-            <li><a href="../../colophon">03 Colophon</a></li>
+            <li><a href="../curriculum">01 Curriculum Vitae</a></li>
+            <li><a href="/blog/">02 Blog</a></li>
+            <li><a href="../colophon">03 Colophon</a></li>
           </ul>
         </nav>
       </header>
-      <main class="blog" id="tags-page-main">{{ content | safe }}</main>
+      <main class="blog">{{ content | safe }}</main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
-    <script src="../../script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
