--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,35 +1,66 @@
-<ul>
-    <li><p id="me">Téotime Pacreau</li>
-    <li><a href="mailto:teotime.pac@outlook.fr?subject=Demande de contact depuis site">teotime.pac<span class="hidden">anti</span>&#64;<span class="hidden">spam</span>outlook.fr</span></a></li>
+
+  <ul>
+    <li><p id="me">Téotime Pacreau</p></li>
     <li>
-        <a class="rss" href="/feed/feed.xml">
-            <i class="ph ph-rss"></i>
-            <span>RSS</span>
-        </a>
-    </li>
-</ul>
-<ul id="links">
-    <li>
-        <a class="social-footer" rel="me" href="https://github.com/teotimepacreau" target="_blank">
-            <i class="ph ph-github-logo"></i>
-            <span>Github</span>
-        </a>
+      <a
+        href="mailto:teotime.pac@outlook.fr?subject=Demande de contact depuis site"
+        >teotime.pac<span class="hidden">anti</span>&#64;<span class="hidden"
+          >spam</span
+        >outlook.fr</a
+      >
     </li>
     <li>
-        <a class="social-footer" rel="me" href="https://mastodon.design/@teotimepacreau" target="_blank">
-            <i class="ph ph-dots-nine"></i> 
-            <span>Mastodon</span>
-        </a>  
+      <a class="rss" href="/feed/feed.xml">
+        <i class="ph ph-rss"></i>
+        <span>RSS</span>
+      </a>
+    </li>
+  </ul>
+  <ul id="links">
+    <li>
+      <a
+        class="social-footer"
+        rel="me"
+        href="https://github.com/teotimepacreau"
+        target="_blank"
+      >
+        <i class="ph ph-github-logo"></i>
+        <span>Github</span>
+      </a>
     </li>
     <li>
-        <a class="social-footer" rel="me" href="https://www.linkedin.com/in/teotime-p-a1194b20a/" target="_blank">
-            <i class="ph ph-linkedin-logo"></i> 
-            <span>LinkedIn</span>
-        </a>
+      <a
+        class="social-footer"
+        rel="me"
+        href="https://mastodon.design/@teotimepacreau"
+        target="_blank"
+      >
+        <i class="ph ph-dots-nine"></i>
+        <span>Mastodon</span>
+      </a>
     </li>
-</ul>
-<ul id="stats">
-  <li class="stat"><p class="stat-name">Score EcoIndex :  A</p></li>
-  <li class="stat"><p class="stat-name">Score Lighthouse :  100</p></li>
-  <li class="stat"><p class="stat-name">Conformité : <abbr title="Référentiel général d’amélioration de l’accessibilité">RGAA</abbr>  100%</p></li>
-</ul>
+    <li>
+      <a
+        class="social-footer"
+        rel="me"
+        href="https://www.linkedin.com/in/teotime-p-a1194b20a/"
+        target="_blank"
+      >
+        <i class="ph ph-linkedin-logo"></i>
+        <span>LinkedIn</span>
+      </a>
+    </li>
+  </ul>
+  <ul id="stats">
+    <li class="stat"><p class="stat-name">Score EcoIndex : A</p></li>
+    <li class="stat"><p class="stat-name">Score Lighthouse : 100</p></li>
+    <li class="stat">
+      <p class="stat-name">
+        Conformité :
+        <abbr title="Référentiel général d’amélioration de l’accessibilité"
+          >RGAA</abbr
+        >
+        100%
+      </p>
+    </li>
+  </ul>
