--- a/src/_includes/baseforblog.html
+++ b/src/_includes/baseforblog.html
@@ -22,7 +22,7 @@
           <span class="navigation-announcer">NAVIGATION</span>
           <ul class="menu">
             <li>
-              <a href="../index.html">HOME</a>
+              <a href="../index">HOME</a>
               <!-- <a id="home" href="../index.html" aria-label="Home page"
                   ><i class="ph-bold ph-house-simple"></i
                 ></a> -->
