--- a/src/_includes/baseforprojets.html
+++ b/src/_includes/baseforprojets.html
@@ -4,19 +4,33 @@
     {% include "head.html"%}
   </head>
   <body>
-    <div class="wrapper">
-      {% include "color-picker.html"%}
+    {% include "color-picker.html"%}
+    <div class="container" id="normal-page-container">
       <header>
-        <nav>
+        <button
+          class="mobile-nav-toggle"
+          aria-controls="primary-navigation"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Menu</span>
+        </button>
+        <nav
+          class="navigation-flexer"
+          id="primary-navigation"
+          data-visible="false"
+        >
+          <span class="navigation-announcer">NAVIGATION</span>
           <ul class="menu">
             <li>
-              <a id="home" href="../index.html" aria-label="Home page"
+              <a href="../index">HOME</a>
+              <!-- <a id="home" href="../index.html" aria-label="Home page"
                 ><i class="ph-bold ph-house-simple"></i
-              ></a>
+              ></a> -->
             </li>
-            <li><a href="../curriculum">01 Curriculum Vitae</a></li>
-            <li><a href="/blog/">02 Blog</a></li>
-            <li><a href="../colophon">03 Colophon</a></li>
+            <li><a href="/curriculum">CV</a></li>
+            <li><a href="/blog">BLOG</a></li>
+            <li><a href="/projets">PROJETS</a></li>
+            <li><a href="../colophon">COLOPHON</a></li>
           </ul>
         </nav>
       </header>
@@ -24,5 +38,6 @@
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
     <script src="../script.js"></script>
+    <script src="../nav.js"></script>
   </body>
 </html>
