--- a/src/_includes/postlayout.html
+++ b/src/_includes/postlayout.html
@@ -27,7 +27,7 @@ title: Blog post de Téotime Pacreau
             <span class="navigation-announcer">NAVIGATION</span>
             <ul class="menu" id="post-menu">
               <li>
-                <a href="../index.html">HOME</a>
+                <a href="../../index">HOME</a>
                 <!-- <a id="home" href="../index.html" aria-label="Home page"
                       ><i class="ph-bold ph-house-simple"></i
                     ></a> -->
