--- a/src/_includes/basefortags.html
+++ b/src/_includes/basefortags.html
@@ -26,7 +26,7 @@ title: Les posts du blog de Téotime Pacreau classés par tag
           <span class="navigation-announcer">NAVIGATION</span>
           <ul class="menu">
             <li>
-              <a href="../index">HOME</a>
+              <a href="/index">HOME</a>
               <!-- <a id="home" href="../index.html" aria-label="Home page"
                     ><i class="ph-bold ph-house-simple"></i
                   ></a> -->
