--- a/src/_includes/baseforblog.html
+++ b/src/_includes/baseforblog.html
@@ -34,7 +34,7 @@
           </ul>
         </nav>
       </header>
-      <main class="blog">{{ content | safe }}</main>
+      <main id="blog">{{ content | safe }}</main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
     <script src="../script.js"></script>
