--- a/src/_includes/projetlayout.html
+++ b/src/_includes/projetlayout.html
@@ -29,7 +29,7 @@
             </li>
             <li><a href="/../curriculum">CV</a></li>
             <li><a href="../../blog">BLOG</a></li>
-            <li><a href="../projets">PROJETS</a></li>
+            <li><a href="../../projets">PROJETS</a></li>
             <li><a href="../../colophon">COLOPHON</a></li>
           </ul>
         </nav>
