--- a/src/_includes/basefortagpage.html
+++ b/src/_includes/basefortagpage.html
@@ -38,7 +38,7 @@ title: Les posts du blog de Téotime Pacreau classés par tag
           </ul>
         </nav>
       </header>
-      <main class="blog" id="tags-page-main">{{ content | safe }}</main>
+      <main id="tags-page">{{ content | safe }}</main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
     <script src="../../script.js"></script>
