fix(style.css) : hide list in footer and display work exp in CV

--- a/src/_includes/basefortagpage.html
+++ b/src/_includes/basefortagpage.html
@@ -41,7 +41,7 @@ title: Les posts du blog de Téotime Pacreau classés par tag
       <main id="tags-page">{{ content | safe }}</main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
-    <script src="../../script.js"></script>
-    <script src="../../nav.js"></script>
+    <script src="/scripts/colorTheme.js"></script>
+    <script src="/scripts/nav.js"></script>
   </body>
 </html>
