--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -37,8 +37,8 @@
     <meta property="og:url" content="https://teotimepacreau.fr/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="Téotime Pacreau"/>
-    <link rel="image_src" href="https://www.teotimepacreau.fr/img/teotimepacreau.png">
-    <meta property="og:image" content="https://www.teotimepacreau.fr/img/teotimepacreau.png"/>
+    <link rel="image_src" href="https://www.teotimepacreau.fr/img/FaviconTwitter800x400.png">
+    <meta property="og:image" content="https://www.teotimepacreau.fr/img/FaviconTwitter800x400.png"/>
     <meta property="og:image:alt" content="Mon logo : 2 cercles et un truchet"/>
     <meta property="og:image:width" content="1600"/>
     <meta property="og:image:height" content="1600"/>
@@ -48,7 +48,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Téotime Pacreau"/>
     <meta name="twitter:description" content="{{ title }}"/>
-    <meta name="twitter:image" content="https://www.teotimepacreau.fr/img/teotimepacreau.png"/>
+    <meta name="twitter:image" content="https://www.teotimepacreau.fr/img/Favicon_Twitter.png/>
     <meta name="twitter:image:alt" content="Mon logo : 2 cercles et un truchet"/>
     <meta name="twitter:creator" content="@teotimepacreau"/>
     <meta name="twitter:site" content="@teotimepacreau"/>
