--- a/src/_includes/postlayout.html
+++ b/src/_includes/postlayout.html
@@ -85,7 +85,7 @@ title: Blog post de Téotime Pacreau
         </script>
       </container>
     </div>
-    <script src="../../script.js"></script>
-    <script src="../../nav.js"></script>
+    <script src="/scripts/colorTheme.js"></script>
+    <script src="/scripts/nav.js"></script>
   </body>
 </html>
