fix(anim homepage) : flash on mobile

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.svg">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.svg"/>
     <!--ICONS-->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script rel="preconnect" src="https://unpkg.com/@phosphor-icons/web"></script>
     <!--Theme-->
     <meta name="theme-color" content="#c3e2ff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#hsl(165, 51%, 18%)" media="(prefers-color-scheme: dark)">
