--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -47,8 +47,8 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Le blog de Téotime Pacreau"/>
     <meta name="twitter:description" content="{{ title }}"/>
-    <meta name="twitter:image" content="https://www.teotimepacreau.fr/img/FaviconTwitter800x400.svg"/>
-    <meta name="twitter:image:alt" content="Mon logo : 2 cercles et un truchet"/>
+    <meta name="twitter:image" content="http://teotimepacreau.fr/img/Favicon_Twitter.jpg">
+    <meta name="twitter:image:alt" content="Mon logo,2 cercles et un truchet"/>
     <meta name="twitter:creator" content="@teotimepacreau"/>
     <meta name="twitter:site" content="@teotimepacreau"/>
         <title>{{ title }}</title>
