--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -63,9 +63,9 @@
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Le site web de Téotime Pacreau" />
 <meta property="og:url" content="https://www.teotimepacreau.fr" />
-<meta property="og:title" content="Téotime Pacreau, management de projet & numérique" />
+<meta property="og:title" content="{{ title }}" />
 <meta property="og:image" content="https://www.teotimepacreau.fr/img/twitterlargecard.png" />
-<meta property="og:description" content="Logo du site web de Téotime Pacreau : deux truchets entrecroisés" />
+<meta property="og:description" content="{{ title }}" />
 
 <!-- twitter cards -->
 <meta content="summary_large_image" name="twitter:card" />
