--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,8 +47,9 @@ h1,
 h2,
 h3,
 h4 {
-  line-height: 1.2;
+  line-height: 1.15;
   text-wrap: balance;
+  letter-spacing: -0.03rem;
 }
 
 /* A elements that don't have a class get default styles */
@@ -82,9 +83,9 @@ hr {
 }
 
 *:focus-visible {
-  transition: box-shadow 0.3s ease;
-  outline: 3px chartreuse solid;
-  box-shadow: 0 0 7px 0px chartreuse;
+  transition: all 0.2s ease;
+  outline: 4px chartreuse solid;
+  outline-offset: 0.3ch;
 }
 
 
@@ -92,10 +93,6 @@ button:focus-visible {
   outline-offset: 0.8ex;
 }
 
-a:focus-visible {
-  outline-offset: 0.8ex;
-  box-shadow: none;
-}
 
 input {
   appearance: none;
@@ -134,7 +131,7 @@ input {
   font-weight: 100 900;
   font-display: swap;
   font-style: oblique 0deg 10deg;
-  src: url("../fonts/Inter.var.woff2") format("woff2");
+  src: url("../fonts/InterVariable.woff2") format("woff2");
 }
 
 @font-face {
@@ -160,12 +157,12 @@ input {
   border-radius: 100vw;
 }
 pre::-webkit-scrollbar {
-  height: 0.4rem;
+  height: 0.15rem;
 }
 
 pre::-webkit-scrollbar-thumb {
   background: var(--accent);
-  border-radius: 100vw;
+  border-radius: 100vw;rem
 }
 
 /*---GENERAL---*/
@@ -189,7 +186,9 @@ pre::-webkit-scrollbar-thumb {
     line-height: 1rem;
     overflow: hidden;
 }
-
+.navigation-flexer, .homepage-nav {
+  font-weight: 600;
+}
 .navigation-flexer > * {
     padding-block: 0.3rem;
 }
@@ -215,10 +214,6 @@ pre::-webkit-scrollbar-thumb {
     background-color: var(--txt);
     color: var(--bg);
     border: 4px solid var(--txt);
-}
-
-header {
-  font-weight: 700;
 }
 
 
@@ -286,7 +281,7 @@ h1 {
   letter-spacing: -0.05rem;
 }
 h2 {
-  font-family: BricolageGrotesque, system, sans-serif;
+  font-family: BricolageGrotesque, sans-serif;
   font-size: var(--baselineh2);
   color: var(--accent);
 }
@@ -328,7 +323,6 @@ pre {
 p > code, li>code {
   background-color: var(--bgdarken65);
   padding-inline: 0.4ch;
-  color: var(--bg);
   border-radius: 0.15rem;
   font-weight: 400;
 }
@@ -700,13 +694,19 @@ input {
   text-decoration: none;
 }
 
-#blog-card-title {
+.blog-card-title {
   color: var(--bg);
+  font-size: var(--baselineh2);
+  font-family: "BricolageGrotesque", sans-serif;
+  line-height: 1.2;
+  text-wrap: balance;
+  font-weight: 700;
 }
 
-#blog-card-title-link::after {
+.blog-card-title::after{
   content: none;
 }
+
 
 #blog-index-tags {
   color: var(--bg);
@@ -725,28 +725,34 @@ input {
   content: "# ";
 }
 
-#blog ul {
+#blog-article-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
   margin-inline: auto;
   column-gap: var(--baseline);
 }
-#blog li {
+#blog-article-list article {
+  gap: calc(0.5*var(--baseline));
   box-shadow: 1px 1px 5px 0px var(--shadow);
   margin-top: var(--baseline);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: calc(0.5 * var(--baseline));
-  border-radius: 1rem;
-  gap: calc(0.5 * var(--baseline));
+  border-radius: calc(0.25*var(--baseline));
   background-color: var(--accent);
+}
+#blog-article-list a {
+  color: var(--bg);
+}
+#blog-article-list time {
+  margin-top: calc(0.5*var(--baseline));
 }
 #blog > h1 {
   margin-top: var(--baseline);
 }
 
-#blog-card-tags {
+.blog-card-tags {
   background-color: var(--accent);
   color: var(--bg);
   text-decoration: none;
@@ -754,14 +760,14 @@ input {
   flex-wrap: wrap;
   gap: calc(0.3*var(--baseline));
 }
-#blog-card-tags-link{
+.blog-card-tags-link{
   padding-inline: calc(0.2*var(--baseline));
   padding-block: calc(0.05*var(--baseline));
   border: 2px solid var(--bg);
   border-radius: 0.3rem;
 }
 
-#blog-card-tags-link:hover {
+.blog-card-tags-link:hover {
   background-color: var(--bg);
   color: var(--accent);
   text-decoration: none;
@@ -799,9 +805,9 @@ input {
 
 .post-grid {
   display: grid;
-  grid-template-columns: minmax(0rem, 20%) minmax(auto, 70ch) minmax(0, 20%);
+  grid-template-columns: minmax(min-content, 15dvw) auto;
   grid-template-rows: min-content min-content auto auto;
-  column-gap: calc(3 * var(--baseline));
+  column-gap: calc(4 * var(--baseline));
 }
 
 
@@ -828,40 +834,56 @@ input {
 .table-of-content a {
   color: var(--txt);
 }
-article a {
-  color: var(--txt);
+
+#article-post img,
+#article-post picture,
+#article-post video {
+  margin-block: var(--baseline);
 }
-article > * + * {
+
+#article-post {
+  max-width: 70ch;
+}
+#article-post > main > p + p {
   margin-top: calc(0.5 * var(--baseline));
 }
 
-article > h2,
+#article-post h2,
 h3 {
   margin-top: var(--baseline);
 }
 
-article > p + p {
+#article-post h2 + p,
+#article-post h3 + p{
+  margin-top: calc(0.5*var(--baseline))
+}
+
+#article-post > p + p {
   margin-top: calc(0.5 * var(--baseline));
 }
 
-article > :nth-child(5){
-  margin-top: var(--baseline);
-}
-
-ol li + li {
+#article-post ol li + li {
   margin-top: calc(0.5 * var(--baseline));
 }
 
 blockquote > p {
-  hanging-punctuation: first;
+  hanging-punctuation: first last;
   text-indent: -0.4em;
 }
-article li {
-  list-style-position: inside;
+li {
+  list-style-position: outside;
 }
 
-article li::marker {
+#article-post li::marker {
   color: var(--accent);
+}
+
+#article-post header > * + * {
+  margin-top: calc(0.5*var(--baseline));
+}
+
+#article-post header {
+  margin-bottom: var(--baseline);
 }
 
 .grid-post-tag li {
@@ -909,7 +931,6 @@ pre {
   margin-block: var(--baseline);
   border-radius: 0.3rem;
   padding: calc(0.25 * var(--baseline));
-  color: var(--bg);
   box-shadow: 1px 1px 2px 0px var(--shadow);
 }
 
@@ -1285,10 +1306,6 @@ hr {
 }
 .projet-layout h2,.projet-layout h3 {
   margin-top: var(--baseline);
-}
-
-.projet-layout li {
-  list-style-position: inside;
 }
 
 .projet-layout > ul > li {
