--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,7 +162,7 @@ pre::-webkit-scrollbar {
 
 pre::-webkit-scrollbar-thumb {
   background: var(--accent);
-  border-radius: 100vw;rem
+  border-radius: 100vw;
 }
 
 /*---GENERAL---*/
@@ -835,12 +835,6 @@ input {
   color: var(--txt);
 }
 
-#article-post img,
-#article-post picture,
-#article-post video {
-  margin-block: var(--baseline);
-}
-
 #article-post {
   max-width: 70ch;
 }
@@ -853,8 +847,8 @@ h3 {
   margin-top: var(--baseline);
 }
 
-#article-post h2 + p,
-#article-post h3 + p{
+#article-post h2 + *,
+#article-post h3 + *{
   margin-top: calc(0.5*var(--baseline))
 }
 
@@ -1353,10 +1347,11 @@ hr {
 figure {
   display: grid;
   place-items: center;
+  margin-block: var(--baseline);
 }
 
 figcaption {
-  margin-top: 0;
+  margin-top: calc(0.25*var(--baseline));
   opacity: 0.85;
   text-align: center;
 }
