--- a/src/_includes/postlayout.html
+++ b/src/_includes/postlayout.html
@@ -91,5 +91,6 @@ title: Blog post de Téotime Pacreau
     </div>
     <script src="/scripts/colorTheme.js"></script>
     <script src="/scripts/nav.js"></script>
+    <script defer src="/scripts/table.js"></script>
   </body>
 </html>
