--- a/src/_includes/bloglist_layout.html
+++ b/src/_includes/bloglist_layout.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     {% include "color-picker.html"%}
-    <div class="container" id="normal-page-container">
+    <div id="normal-page-container">
       <header>
         {% include "navigation.html"%}
         {% include "mobilenav.html"%}
