--- a/src/_includes/tagslist_layout.html
+++ b/src/_includes/tagslist_layout.html
@@ -9,7 +9,7 @@ title: Les posts du blog de Téotime Pacreau classés par tag
   </head>
   <body>
     {% include "color-picker.html"%}
-    <div class="container" id="normal-page-container">
+    <div id="normal-page-container">
       <header>
         {% include "mobilenav.html"%}
         {% include "navigation.html"%}
