--- a/src/_includes/mobilenav.html
+++ b/src/_includes/mobilenav.html
@@ -13,7 +13,7 @@
     xmlns="http://www.w3.org/2000/svg"
     width="32"
     height="32"
-    fill="#000000"
+    fill="var(--txt)"
     viewBox="0 0 256 256"
   >
     <path
