--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        {% include "head.html"%}
+        {% include "head.njk"%}
     </head>
     <body>
         {% include "color-picker.html"%}
