--- a/src/_includes/blogpost_layout.njk
+++ b/src/_includes/blogpost_layout.njk
@@ -4,7 +4,7 @@ pageId: "blogpost"
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    {% include "head.html"%}
+    {% include "head.njk"%}
   </head>
   <body>
     {% include "color-picker.html"%}
