--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -33,7 +33,7 @@
 <!--Social-->
 <link href="https://twitter.com/teotimepacreau" rel="me"/>
 <link href="https://mastodon.design/@teotimepacreau" rel="me"/>
-<meta name="fediverse:creator" content="@teotimepacreau" />
+<meta name="fediverse:creator" content="@teotimepacreau@mastodon.design" />
 <meta name="generator" content="Eleventy"/>
 
 <!-- open graph tags -->
@@ -44,7 +44,7 @@
 <meta name="robots" content="max-image-preview:large">
 <meta property="og:locale" content="fr_FR">
 <meta property="og:image:type" content="image/png">
-<meta property="og:type" content="article" />
+<meta property="og:type" content="{% if type == "Page" %}website{% else %}article{% endif %}" />
 <meta property="article:tag" content="{{ tags }}" />
 <meta property="article:published_time" content="{{ date }}" />
 <meta property="og:site_name" content="Téotime Pacreau" />
@@ -56,7 +56,7 @@
 <meta name="owner" content="Téotime Pacreau">
 
 <!-- auto generator of OpenGraph images -->
-{% ogImage "og-image.og.njk", { title: title | safe} %}
+{% ogImage "og-image.og.njk", { title: title | safe, date: date | safe } %}
 
 {% jsonLdScript meta, type, tags %}
 
