--- a/og-image.og.njk
+++ b/og-image.og.njk
@@ -22,7 +22,7 @@
         color: #752a04;
         font-size: 72px;
         letter-spacing: -.12rem;
-        line-height: 1.3;
+        line-height: 1.2;
     }
     #footer {
         margin-left: auto;
@@ -32,16 +32,17 @@
     }
     #footer span {
        color: #752a04;
-        opacity: .9;
-        font-weight: 300; 
+        font-weight: 300;
+                font-size: 2rem;
+
     }
     #footer svg {
         height: 4rem;
         width: 4rem;
     }
     time {
+        font-size: 2rem;
         color: #752a04;
-        opacity: .9;
         font-weight: 300;
     }
 </style>
