--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -44,6 +44,8 @@
 <meta name="robots" content="max-image-preview:large">
 <meta property="og:locale" content="fr_FR">
 <meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <meta property="og:type" content="{% if type == "Page" %}website{% else %}article{% endif %}" />
 <meta property="article:tag" content="{{ tags }}" />
 <meta property="article:published_time" content="{{ date }}" />
