--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -37,15 +37,15 @@
 <meta name="generator" content="Eleventy"/>
 
 <!-- open graph tags -->
+<meta name="twitter:title" content="{{ title }}" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@teotimepacreau">
 <meta name="twitter:creator" content="@teotimepacreau">
-<meta property="twitter:title" content="{{ title }}">
 <meta name="robots" content="max-image-preview:large">
 <meta property="og:locale" content="fr_FR">
 <meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="1920">
-<meta property="og:image:height" content="1080">
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 <meta property="og:type" content="{% if type == "Page" %}website{% else %}article{% endif %}" />
 <meta property="article:tag" content="{{ tags }}" />
 <meta property="article:published_time" content="{{ date }}" />
