--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -5,7 +5,7 @@
 
 {% if pageId == "blogpost" %} 
 <!-- STYLE FOR CODE BLOCKS -->
-<link rel="stylesheet" href="/css/prism-duotone-forest.css" />
+<link rel="stylesheet" href="/css/prism-hopscotch.css" />
 <link rel="stylesheet" href="/css/partage.css" />
  {% endif %}
 
