enhancement(zoom-images)

--- a/src/_includes/blogpost_layout.njk
+++ b/src/_includes/blogpost_layout.njk
@@ -78,5 +78,6 @@ pageId: "blogpost"
     {% include "loadscripts.html"%}
     <script defer src="/scripts/table.js"></script>
     <script defer src="/scripts/share.js"></script>
+    <script defer src="/scripts/zoom-images.js"></script>
   </body>
 </html>
