--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -7,6 +7,7 @@
 <!-- STYLE FOR CODE BLOCKS -->
 <link rel="stylesheet" href="/css/prism-hopscotch.css" />
 <link rel="stylesheet" href="/css/partage.css" />
+<link rel="stylesheet" href="/css/zoom-images.css" />
  {% endif %}
 
 <!-- Auto detection of the RSS feed for RSS readers -->
