enhance (zoom images)

--- a/src/css/zoom-images.css
+++ b/src/css/zoom-images.css
@@ -4,6 +4,7 @@ img {
 
 /*   Open state of the dialog  */
 dialog[open] {
+  animation: open .2s ease-out forwards;
   opacity: 1;
   margin-inline: auto;
   margin-block: auto;
@@ -23,13 +24,11 @@ dialog[open] {
     width: 90vw;
   }
 }
-
 /*   Closed state of the dialog   */
 dialog {
   opacity: 0;
-  transition: opacity 0.5s ease-out, width 0.5s ease-out, display 0.5s ease-out;
-  transition-behavior: allow-discrete;
 }
+
 
 /*   Before-open state  */
 /* Needs to be after the previous dialog[open] rule to take effect,
@@ -39,6 +38,12 @@ dialog {
     opacity: 0;
   }
 }
+
+@keyframes open {
+  from { opacity: 0 }
+  to   { opacity: 1 }
+}
+
 
 /* Transition the :backdrop when the dialog modal is promoted to the top layer */
 dialog::backdrop {
