shortcode(sidenote margin)

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/css/prism-hopscotch.css" />
 <link rel="stylesheet" href="/css/partage.css" />
 <link rel="stylesheet" href="/css/zoom-images.css" />
+<link rel="stylesheet" href="/css/citations-marginales.css">
  {% endif %}
 
 <!-- Auto detection of the RSS feed for RSS readers -->
